<resources>
    <string name="app_name">AppSqLite</string>
    <string name="app_name2">Confirmarcao de Dados</string>
    <string name="edtNome">Digite seu nome</string>
    <string name="edtEndereco">Digite seu endereço</string>
    <string name="edtBairro">Digite seu bairro</string>
    <string name="edtCep">Digite seu cep</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnConfirmar">Confirmar</string>
</resources>